# CPL-SDL_project

./: CMakeLists.txt  README.md
include/: common.h  game.h  gameover.h  hero.h  main.h  menu.h
include/utils/: audio.h  display.h  input.h  land.h
src/: game.c  gameover.c  hero.c  main.c  menu.c
src/utils/: audio.c  display.c  input.c  land.c
